language/move-lang/tests/move_check/typing/constraints_not_satisfied_lvalues_decl_type.move
module M {
    struct CupC<T: copy> {}
    struct R {}

    fun foo() {
        let x: CupC<R>;
    }

}
